Add docker compose for PG database. Add repository for devices. Implemetn logic. Add logging.
