# src/main/java/demo/deviceregistry/app/dto/DeviceDto.java
@@ -3,10 +3,10 @@ package demo.deviceregistry.app.dto;
 import java.time.Instant;
 
 public record DeviceDto(
-        String id,
+        String deviceId,
         String name,
         String brand,
-        DeviceState state,
+        DeviceDtoState state,
         Instant creationTime
 ) {
 }
